Fix: Deploy tightying
changes the header hr's to be the sam
e color as the rest on the page. lightened the underline on the header links. added extra margin to the footer so the footer butt
ons can be clicked without hitting the broswer nav

--- a/src/components/home/Footer.module.scss
+++ b/src/components/home/Footer.module.scss
@@ -1,5 +1,5 @@
 .footer {
-    margin-block-end: var(--space-xxxxl);
+    margin-block-end: 8rem;
     padding-inline: 5vw;
     display: flex;
     align-items: center;
